--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,17 +95,17 @@ flutter:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/splash_image.png"
+  image_path: "assets/images/ic_custom_launcher.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/splash_image.png"
+    image_path: "assets/images/ic_custom_launcher.png"
     background_color: "#FFFFFF"
     theme_color: "#FFFFFF"
   windows:
     generate: true
-    image_path: "assets/splash_image.png"
+    image_path: "assets/images/ic_custom_launcher.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/splash_image.png"
+    image_path: "assets/images/ic_custom_launcher.png"
